# switchable_networks_find_my

./: .checkpatch.conf  .gitignore  CMakeLists.txt  CODEOWNERS  Kconfig.fmn  LICENSE  README.rst  index.rst
applications/thingy/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.rst  pm_static_thingy53_nrf5340_cpuapp_ns.yml  prj_ZDebug.conf  prj_ZRelease.conf  sample.yaml  sysbuild.conf  sysbuild_ZRelease.conf
applications/thingy/boards/: thingy53_nrf5340_cpuapp_ZDebug.conf  thingy53_nrf5340_cpuapp_ZDebug.overlay  thingy53_nrf5340_cpuapp_ZRelease.conf  thingy53_nrf5340_cpuapp_common.overlay  thingy53_nrf5340_cpuapp_ns_ZDebug.conf  thingy53_nrf5340_cpuapp_ns_ZDebug.overlay  thingy53_nrf5340_cpuapp_ns_ZRelease.conf  thingy53_nrf5340_cpuapp_ns_ZRelease.overlay
applications/thingy/src/: battery.c  battery.h  main.c  motion.c  motion.h  speaker.c  speaker.h
applications/thingy/src/platform/: motion_platform.h  motion_poll.c  speaker_none.c  speaker_platform.h
applications/thingy/sysbuild/mcuboot/: prj_ZDebug.conf  prj_ZRelease.conf
samples/switchable_networks/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  sample.yaml  sysbuild.cmake
samples/switchable_networks/configuration/: pm_static_nrf52833dk_nrf52833_ZDebug.yml  prj_ZDebug.conf  prj_ZRelease.conf
samples/switchable_networks/configuration/boards/: nrf52833dk_nrf52833_ZDebug.conf  nrf54l15dk_nrf54l15_cpuapp.conf
samples/switchable_networks/src/: main.c
samples/switchable_networks/src/dfu/: CMakeLists.txt  Kconfig  bt_adv.c  core.c
samples/switchable_networks/src/ui/: core.c  (+3 more)
samples/switchable_networks/sysbuild/: CMakeLists.txt
src/: CMakeLists.txt  Kconfig  fmna.c  fmna_adv.c  fmna_adv.h  fmna_battery.c  fmna_battery.h  fmna_conn.c  fmna_conn.h  fmna_gatt_ais.c  fmna_gatt_ais.h  fmna_gatt_fmns.c  fmna_gatt_fmns.h  fmna_gatt_pkt_manager.c  fmna_gatt_pkt_manager.h  fmna_keys.c  fmna_keys.h  fmna_motion_detection.c  fmna_nfc.c  fmna_nfc.h  fmna_pair.c  fmna_pair.h  fmna_product_plan.c  fmna_product_plan.h  fmna_serial_number.c  fmna_serial_number.h  fmna_sound.c  fmna_sound.h  fmna_state.c  fmna_state.h  fmna_storage.c  fmna_storage.h  fmna_version.h  fmna_version_custom.c
src/crypto/: CMakeLists.txt  crypto_helper.c  crypto_helper.h  crypto_log.h  fm_crypto.h  fm_crypto_oberon.c  fm_crypto_platform.h
src/events/: CMakeLists.txt  fmna_config_event.c  fmna_config_event.h  fmna_debug_event.c  fmna_debug_event.h  fmna_event.c  fmna_event.h  fmna_non_owner_event.c  fmna_non_owner_event.h  fmna_owner_event.c  fmna_owner_event.h  fmna_pair_event.c  fmna_pair_event.h
src/uarp/: CMakeLists.txt  Kconfig  fmna_uarp.c  fmna_uarp.h  fmna_uarp_service.c  fmna_uarp_service.h
src/uarp/UARPDK/: CMakeLists.txt  CoreUARPAccessory.c  CoreUARPPlatform.h  CoreUARPPlatformAccessory.c  CoreUARPPlatformAccessory.h  CoreUARPPlatformZephyr.c  CoreUARPPlatformZephyr.h  CoreUARPProtocolDefines.h  CoreUARPUtils.c
src/uarp/payload/: CMakeLists.txt  Kconfig  fmna_uarp_payload.c  fmna_uarp_payload.h  fmna_uarp_payload.ld
src/uarp/superbinary/: CMakeLists.txt  Kconfig  fmna_uarp_superbinary_version.c
src/uarp/writer/: CMakeLists.txt  Kconfig  fmna_uarp_writer.h
tests/crypto/: CMakeLists.txt  prj.conf  testcase.yaml
tests/crypto/src/: main.c  test_collab.c  test_decrypt.c  test_ecdsa.c  test_ecies.c  test_keyroll.c  test_ssecret.c
(+164 files in other folders)
